# booleangene

./: GeneNetwork.py  README.md  pyproject.toml
BooleanGene/: READAME.md
sample_inputs/: Apoptosis_Network_(EXPR).zipexpressions.ALL.txt  Arabidopsis_thaliana_Cell_Cycle_(EXPR).zipexpressions.ALL.txt  Aurora_Kinase_A_in_Neuroblastoma_(EXPR).zipexpressions.ALL.txt  BT474_Breast_Cell_Line_Long-term_ErbB_Network_(EXPR).zipexpressions.ALL.txt  BT474_Breast_Cell_Line_Short-term_ErbB_Network_(EXPR).zipexpressions.ALL.txt  B_bronchiseptica_and_T_retortaeformis_coinfection_(EXPR).zipexpressions.ALL.txt  B_cell_differentiation_(EXPR).zipexpressions.ALL.txt  Body_Segmentation_in_Drosophila_2013_(EXPR).zipexpressions.ALL.txt  Bordetella_bronchiseptica_(EXPR).zipexpressions.ALL.txt  Bortezomib_Responses_in_U266_Human_Myeloma_Cells_(EXPR).zipexpressions.ALL.txt  Budding_Yeast_Cell_Cycle_(EXPR).zipexpressions.ALL.txt  Budding_Yeast_Cell_Cycle_2009_(EXPR).zipexpressions.ALL.txt  CD4+_T_Cell_Differentiation_and_Plasticity_(EXPR).zipexpressions.ALL.txt  CD4+_T_cell_Differentiation_(EXPR).zipexpressions.ALL.txt  CD4_T_cell_dynamics_-_Workshop_v2_(EXPR).zipexpressions.ALL.txt  CD4_T_cell_signaling_(EXPR).zipexpressions.ALL.txt  Cardiac_development_(EXPR).zipexpressions.ALL.txt  Cell_Cycle_Transcription_by_Coupled_CDK_and_Network_Oscillators_(EXPR).zipexpressions.ALL.txt  Cholesterol_Regulatory_Pathway_(EXPR).zipexpressions.ALL.txt  Colitis-associated_colon_cancer_(EXPR).zipexpressions.ALL.txt  Cortical_Area_Development_(EXPR).zipexpressions.ALL.txt  (+68 more)
src/booleangene.egg-info/: PKG-INFO
(+1 files in other folders)
