[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "boolean_gene"
version = "0.0.1"
description = "Analysis of Boolean gene networks"
readme = "README.md"
requires-python = ">=3.6"
authors = [
    { name = "Chris Viets" }
]
dependencies = [
    "numpy",
    "networkx",
    "sympy",
    "tqdm"
]

[project.urls]
"Homepage" = "https://github.com/cviets/booleangene"
"Bug Tracker" = "https://github.com/cviets/booleangene/issues"

[project.scripts]
boolean_gene = "boolean_gene.cli:main"
